--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <button class="btn">search</button>
     </div>
   </div>
-  <div class="main">
-    
+  <div class="main-div">
+    <!-- all images will be shown here -->
   </div>
 </body>
 </html>
